// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Collapsible /> Controlled Rendering renders closed by default 1`] = `
<div
  className="pgn_collapsible collapsible"
  open={false}
>
  <div>
    <svg
      aria-hidden="true"
      height="1em"
      role="img"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1683 808l-742 741q-19 19-45 19t-45-19l-742-741q-19-19-19-45.5t19-45.5l166-165q19-19 45-19t45 19l531 531 531-531q19-19 45-19t45 19l166 165q19 19 19 45.5t-19 45.5z"
      />
    </svg>
  </div>
  <div
    aria-expanded={false}
    className="trigger d-flex align-items-center"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <h4
      className="flex-grow-1"
    >
      A heading
    </h4>
    <span
      aria-hidden={true}
      className="collapsible-card-header-icon"
    >
      +
    </span>
  </div>
  <div
    aria-expanded={false}
    className="close-only"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    Close
  </div>
  <div
    aria-expanded={false}
    className="open-only"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    Open
  </div>
  <div>
    <div />
  </div>
</div>
`;

exports[`<Collapsible /> Controlled Rendering renders open by default 1`] = `
<div
  className="pgn_collapsible collapsible"
>
  <div>
    <svg
      aria-hidden="true"
      height="1em"
      role="img"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1683 808l-742 741q-19 19-45 19t-45-19l-742-741q-19-19-19-45.5t19-45.5l166-165q19-19 45-19t45 19l531 531 531-531q19-19 45-19t45 19l166 165q19 19 19 45.5t-19 45.5z"
      />
    </svg>
  </div>
  <div
    aria-expanded={false}
    className="trigger d-flex align-items-center"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <h4
      className="flex-grow-1"
    >
      A heading
    </h4>
    <span
      aria-hidden={true}
      className="collapsible-card-header-icon"
    >
      +
    </span>
  </div>
  <div
    aria-expanded={false}
    className="close-only"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    Close
  </div>
  <div
    aria-expanded={false}
    className="open-only"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    Open
  </div>
  <div>
    <div />
  </div>
</div>
`;

exports[`<Collapsible /> Uncontrolled Rendering renders closed by default 1`] = `
<div
  className="pgn_collapsible collapsible"
>
  <div>
    <svg
      aria-hidden="true"
      height="1em"
      role="img"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1683 808l-742 741q-19 19-45 19t-45-19l-742-741q-19-19-19-45.5t19-45.5l166-165q19-19 45-19t45 19l531 531 531-531q19-19 45-19t45 19l166 165q19 19 19 45.5t-19 45.5z"
      />
    </svg>
  </div>
  <div
    aria-expanded={false}
    className="trigger d-flex align-items-center"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <h4
      className="flex-grow-1"
    >
      A heading
    </h4>
    <span
      aria-hidden={true}
      className="collapsible-card-header-icon"
    >
      +
    </span>
  </div>
  <div
    aria-expanded={false}
    className="close-only"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    Close
  </div>
  <div
    aria-expanded={false}
    className="open-only"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    Open
  </div>
  <div>
    <div />
  </div>
</div>
`;

exports[`<Collapsible /> Uncontrolled Rendering renders open by default 1`] = `
<div
  className="pgn_collapsible collapsible is-open"
>
  <div>
    <svg
      aria-hidden="true"
      height="1em"
      role="img"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1683 808l-742 741q-19 19-45 19t-45-19l-742-741q-19-19-19-45.5t19-45.5l166-165q19-19 45-19t45 19l531 531 531-531q19-19 45-19t45 19l166 165q19 19 19 45.5t-19 45.5z"
      />
    </svg>
  </div>
  <div
    aria-expanded={true}
    className="trigger d-flex align-items-center"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <h4
      className="flex-grow-1"
    >
      A heading
    </h4>
    <span
      aria-hidden={true}
      className="collapsible-card-header-icon"
    >
      -
    </span>
  </div>
  <div
    aria-expanded={true}
    className="close-only"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    Close
  </div>
  <div
    aria-expanded={true}
    className="open-only"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    Open
  </div>
  <div>
    <div>
      <p
        className="example-content"
      >
        Example content
      </p>
    </div>
  </div>
</div>
`;
